package com.ftn.sbnz.model;

public enum Category {
	SKINCARE,
	MAKEUP,
	HAIRCARE,
	FRAGRANCE,
	BODYCARE
}
