package com.ftn.sbnz.model;

public enum ImportDecision {
	APPROVE,
	APPROVE_WITH_CAUTION,
	REJECT
}
