package com.ftn.sbnz.model;

public enum ProductType {
	LUXURY,
	MASS,
	PROFESSIONAL,
	TREND,
	STANDARD
}
