package com.ftn.sbnz.model;

public enum SalesTrend {
	GROWING,
	STABLE,
	DECLINING
}
